--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -14,10 +15,76 @@
   <![endif]-->
 </head>
 
-  <body>
+<body>
+  <div class="header">
+    <header>
+      <nav>
+        <a href="#">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      </nav>
+    </header>
+  </div>
+  <section class='upper-content'>
+    <div class='heading-text'>
+      <h1>Innovation<br>
+        On<br>
+        Demand</h1>
+      <button>Get Started</button>
+    </div>
 
-    <!-- Copy and paste your HTML from the first UI project here -->
-      
-    
-  </body>
+    <img src="img/header-img.png" alt="Image of a code snippet.">
+  </section>
+  <section class='main-top'>
+    <div class='features'>
+      <h4>Features</h4>
+      <p>elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse
+        eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+    <div class='about'>
+      <h4>About</h4>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse
+        eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  </section>
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  <section class='main-bottom'>
+    <div class='services'>
+      <h4>Services</h4>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse
+        eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+    <div class='product'>
+      <h4>Product</h4>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse
+        eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+    <div class='vision'>
+      <h4>Vision</h4>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse
+        eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  </section>
+
+  <footer>
+    <section class='contact'>
+      <h2>Contact</h2>
+      123 Way 456 Street<br>
+      Somewhere, USA<br>
+      1 (888) 888-8888<br>
+      sales@greatidea.io
+    </section>
+    Copyright Great Idea! 2018
+  </footer>
+
+</body>
+
 </html>
