--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -25,7 +25,7 @@
         <a href="#">Features</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
-        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+        <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
       </nav>
     </header>
   </div>
